# pdf-talk

./: .gitignore  Cargo.toml  README.md
scripts/: gen-pdfs.sh  subset-for-maxi.sh
src/: config.rs  document.rs  fonts.rs  lib.rs  main.rs
src/commands/: create_deck.rs  create_maxi.rs  create_mini.rs  mod.rs
