[package]
name = "pdf-talk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
lopdf = { version = "0.31.0", features = ["serde", "default", "embed_image"] }
printpdf = { path = "../../fschutt/printpdf"}
ttf-parser = "0.20.0"
